test_files/netlist_validation/invalid/invalid_02.net
V1 N001 0 12
R1 OUT N001 5k
R2 OUT 0 1k
.stepPARAM A 1 2 1
.backanno
.end
